# Neos

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  debug.sh
include/core/: Atom.hxx  CoreMods.hxx  Module.hxx  ModuleOperations.hxx  Spice.hxx  __core__.hxx  all.hxx  draft_ideas.hxx
include/core/arch/: Atom.hxx  Module.hxx  README.md  __arch__.hxx  __atom__.hxx  __conditions__.hxx  __config__.hxx  __types__.hxx  __va_mpl__.hxx
include/core/list/: List.hxx  ListComparisonOperations.hxx  ListContainOperations.hxx  ListManagementOperations.hxx
include/core/meta/: Assert.hxx  BaseTypes.hxx  Conditions.hxx  Variadic.hxx
include/core/module/: CoreMods.hxx  ModuleOperations.hxx
include/core/set/: Set.hxx
include/meta/: List.hxx  MetaConditions.hxx  all.hxx  assert.hxx  base_types.hxx  conditions.hxx  data_structure.hxx  list.hxx  module_utils.hxx  spice_utils.hxx  variadic.hxx
include/test/: TestAtom.hxx  all.hxx  macro.hxx
include/test/core/arch/: TestClassAtom.hxx  TestConditions.hxx  TestVAMPL.hxx
src/: .devnotes.md  a.out  main.cpp  test.cpp  test2.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp
test/: CMakeLists.txt  README.md
test/core/: TestClassAtom.cc  TestCoreMods.cc  TestModule.cc
test/core/arch/: TestClassAtom.cc  TestConditions.cc  TestVAMPL.cc
test/core/list/: TestList.cc  TestListComparisonOperations.cc
test/core/meta/: TestConditions.cc  TestVariadic.cc
test/core/set/: TestSet.cc
test/meta/: TestAllMeta.hxx  TestClassAtom.hxx  TestConditions.cc  TestConditions.hxx  TestDataStructure.hxx  TestList.cc  TestList.hxx  TestModule.hxx  TestModuleUtils.hxx  TestSpiceUtils.hxx  TestVariadic.cc  TestVariadic.hxx  test_spice_utils.hxx
(+4 files in other folders)
